CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/Sfrosit_t_provr_fiscal_agrement_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_provr_fiscal_agrement_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_provr_fiscal_agrement_hist</externalName>
    <label>Sfrosit$t_provr_fiscal_agrement_hist</label>
    <pluralLabel>Sfrosit$t_provr_fiscal_agrement_hist</pluralLabel>
</CustomObject>