CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/cde_pmt_method__c.field-meta.xml
<CustomField>
    <fullName>cde_pmt_method__c</fullName>
    <description>cde_pmt_method</description>
    <externalDeveloperName>cde_pmt_method</externalDeveloperName>
    <label>Cde_pmt_method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>