CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/cde_reason_end_agrmt__c.field-meta.xml
<CustomField>
    <fullName>cde_reason_end_agrmt__c</fullName>
    <description>cde_reason_end_agrmt</description>
    <externalDeveloperName>cde_reason_end_agrmt</externalDeveloperName>
    <label>Cde_reason_end_agrmt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>