CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/cde_type_agrmt__c.field-meta.xml
<CustomField>
    <fullName>cde_type_agrmt__c</fullName>
    <description>cde_type_agrmt</description>
    <externalDeveloperName>cde_type_agrmt</externalDeveloperName>
    <label>Cde_type_agrmt</label>
    <length>3</length>
    <type>Text</type>
</CustomField>