CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/cde_type_status__c.field-meta.xml
<CustomField>
    <fullName>cde_type_status__c</fullName>
    <description>cde_type_status</description>
    <externalDeveloperName>cde_type_status</externalDeveloperName>
    <label>Cde_type_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>