CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/dte_begin_agrmt__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_agrmt__c</fullName>
    <description>dte_begin_agrmt</description>
    <externalDeveloperName>dte_begin_agrmt</externalDeveloperName>
    <label>Dte_begin_agrmt</label>
    <type>Date</type>
</CustomField>