CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/dte_close_agrmt_fiscal__c.field-meta.xml
<CustomField>
    <fullName>dte_close_agrmt_fiscal__c</fullName>
    <description>dte_close_agrmt_fiscal</description>
    <externalDeveloperName>dte_close_agrmt_fiscal</externalDeveloperName>
    <label>Dte_close_agrmt_fiscal</label>
    <type>Date</type>
</CustomField>