CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/dte_end_agrmt__c.field-meta.xml
<CustomField>
    <fullName>dte_end_agrmt__c</fullName>
    <description>dte_end_agrmt</description>
    <externalDeveloperName>dte_end_agrmt</externalDeveloperName>
    <label>Dte_end_agrmt</label>
    <type>Date</type>
</CustomField>