CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/id_service__c.field-meta.xml
<CustomField>
    <fullName>id_service__c</fullName>
    <description>id_service</description>
    <externalDeveloperName>id_service</externalDeveloperName>
    <label>Id_service</label>
    <length>10</length>
    <type>Text</type>
</CustomField>