CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/idn_agrmt_fiscal_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_agrmt_fiscal_hist__c</fullName>
    <description>idn_agrmt_fiscal_hist</description>
    <externalDeveloperName>idn_agrmt_fiscal_hist</externalDeveloperName>
    <label>Idn_agrmt_fiscal_hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>