CHATS_SIT/force-app/main/default/objects/Sfrosit_t_provr_fiscal_agrement_hist__x/fields/txt_cmt__c.field-meta.xml
<CustomField>
    <fullName>txt_cmt__c</fullName>
    <description>txt_cmt</description>
    <externalDeveloperName>txt_cmt</externalDeveloperName>
    <label>Txt_cmt</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>